--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "pacman-sv",
+	"name": "devleit",
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
@@ -17,6 +17,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^9.6.0",
+		"@types/node": "^22.7.9",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.7.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -28,5 +29,9 @@
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3",
 		"vitest": "^2.0.4"
+	},
+	"dependencies": {
+		"fs": "^0.0.1-security",
+		"gl-matrix": "^3.4.3"
 	}
 }
